force-app/main/default/objects/SSC_Call_Type__c/fields/ActiveString__c.field-meta.xml
<CustomField>
    <fullName>ActiveString__c</fullName>
    <formula>IF(Active__c == true &amp;&amp; (External_Id__c == &apos;8915&apos; || External_Id__c == &apos;8812&apos; || Send_to_Drone__c == true), &apos;1&apos;, &apos;0&apos;)</formula>
    <label>ActiveString</label>
    <type>Text</type>
</CustomField>