force-app/main/default/objects/SSC_Call_Type__c/fields/Cicilan__c.field-meta.xml
<CustomField>
    <fullName>Cicilan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cicilan</label>
    <type>Checkbox</type>
</CustomField>