force-app/main/default/objects/SSC_Call_Type__c/fields/Flagging_Sosmed__c.field-meta.xml
<CustomField>
    <fullName>Flagging_Sosmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagging Sosmed</label>
    <type>Checkbox</type>
</CustomField>