force-app/main/default/objects/SSC_Call_Type__c/fields/Hak_Subjek_Data_Pribadi__c.field-meta.xml
<CustomField>
    <fullName>Hak_Subjek_Data_Pribadi__c</fullName>
    <description>Termasuk Bagian dari Case Type untuk Perlidungan Data Pribadi</description>
    <label>Hak Subjek Data Pribadi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hak Menunda Pemrosesan</fullName>
            </value>
            <value>
                <fullName>Hak Mengakhiri Pemrosesan</fullName>
            </value>
            <value>
                <fullName>Hak atas Pembaruan</fullName>
            </value>
            <value>
                <fullName>Hak Akses</fullName>
            </value>
            <value>
                <fullName>Hak Menarik Persetujuan</fullName>
            </value>
            <value>
                <fullName>Hak atas Akses</fullName>
            </value>
            <value>
                <fullName>Aduan PDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>