force-app/main/default/objects/SSC_Call_Type__c/fields/IsTRB__c.field-meta.xml
<CustomField>
    <fullName>IsTRB__c</fullName>
    <formula>CONTAINS(External_Id__c, &apos;TRB&apos;)</formula>
    <label>IsTRB?</label>
    <type>Checkbox</type>
</CustomField>