force-app/main/default/objects/SSC_Call_Type__c/fields/Jenis_Produk__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Produk__c</fullName>
    <label>Jenis Produk LBUT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>