force-app/main/default/objects/SSC_Call_Type__c/fields/Jenis_Produk_LKPBU__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Produk_LKPBU__c</fullName>
    <label>Jenis Produk LKPBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>