force-app/main/default/objects/SSC_Call_Type__c/fields/LBUT__c.field-meta.xml
<CustomField>
    <fullName>LBUT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LBUT</label>
    <type>Checkbox</type>
</CustomField>