force-app/main/default/objects/SSC_Call_Type__c/fields/LKBPU__c.field-meta.xml
<CustomField>
    <fullName>LKBPU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LKBPU</label>
    <type>Checkbox</type>
</CustomField>