force-app/main/default/objects/SSC_Call_Type__c/fields/Rekening_Penipu__c.field-meta.xml
<CustomField>
    <fullName>Rekening_Penipu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rekening Penipu</label>
    <type>Checkbox</type>
</CustomField>