force-app/main/default/objects/SSC_Call_Type__c/fields/RPA_CDD__c.field-meta.xml
<CustomField>
    <fullName>RPA_CDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPA CDD</label>
    <type>Checkbox</type>
</CustomField>