force-app/main/default/objects/SSC_Call_Type__c/fields/Sandi_Jenis_Produk_LBUT__c.field-meta.xml
<CustomField>
    <fullName>Sandi_Jenis_Produk_LBUT__c</fullName>
    <description>Sandi Jenis Prdouk LBUT</description>
    <label>Sandi Jenis Produk LBUT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>KK</fullName>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>