force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>SCC_Additional_Details__c</fullName>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>