force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Agent_SLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Agent_SLA__c</fullName>
    <description>This defines Agent SLA</description>
    <label>Agent SLA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>