force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Case_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Type_Detail__c</fullName>
    <formula>IF( NOT( ISBLANK(External_Id__c ) ) , External_Id__c &amp; &apos; - &apos; &amp;  SSC_Case_Description__c, Name &amp; &apos; - &apos; &amp;  SSC_Case_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type Detail</label>
    <type>Text</type>
</CustomField>