force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Case_Type_With_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case_Type_With_Description__c</fullName>
    <formula>Name + &apos; - &apos; + SSC_Case_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type With Description</label>
    <type>Text</type>
</CustomField>