force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Checker__c.field-meta.xml
<CustomField>
    <fullName>SCC_Checker__c</fullName>
    <description>This field is to add the checker for the agent</description>
    <label>Checker</label>
    <length>30</length>
    <type>Text</type>
</CustomField>