force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>SCC_Customer_Segment__c</fullName>
    <description>Consists of the type of segment of the case.</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individu Umum</fullName>
            </value>
            <value>
                <fullName>Individu Priority &amp; Private</fullName>
            </value>
            <value>
                <fullName>UMKM</fullName>
            </value>
            <value>
                <fullName>Korporasi</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>