force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Level1_Escalation_team__c.field-meta.xml
<CustomField>
    <fullName>SCC_Level1_Escalation_team__c</fullName>
    <description>This field indicates the escalation team for level 1</description>
    <label>Level 1 Escalation Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>