force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Level1_OLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Level1_OLA__c</fullName>
    <description>This is the OLA for Level 1</description>
    <label>Level 1 OLA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>