force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Level3_Escalation_team__c.field-meta.xml
<CustomField>
    <fullName>SCC_Level3_Escalation_team__c</fullName>
    <description>This indicates the escalation team for level 3</description>
    <label>Level 3 Escalation Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>