force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Level3_OLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Level3_OLA__c</fullName>
    <description>This is for OLA Level 3</description>
    <label>Level 3 OLA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>