force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_List_of_Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>SCC_List_of_Required_Documents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List Dokumen yang dibutuhkan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>