force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Priority__c.field-meta.xml
<CustomField>
    <fullName>SCC_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>