force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Segment__c.field-meta.xml
<CustomField>
    <fullName>SCC_Segment__c</fullName>
    <description>Consists of the type of segment of the case.</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individu Umum</fullName>
            </value>
            <value>
                <fullName>Individu Priority &amp; Private</fullName>
            </value>
            <value>
                <fullName>UMKM</fullName>
            </value>
            <value>
                <fullName>Korporasi</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Individu Umum, Individu Priority &amp; Private</fullName>
                <isActive>false</isActive>
                <label>Individu Umum, Individu Priority &amp; Private</label>
            </value>
            <value>
                <fullName>Individu Umum, UMKM</fullName>
                <isActive>false</isActive>
                <label>Individu Umum, UMKM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>