force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Sub_Description__c.field-meta.xml
<CustomField>
    <fullName>SCC_Sub_Description__c</fullName>
    <description>This fields allows agent to add sub-description</description>
    <label>Sub Case Reference</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>