force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Total_OLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Total_OLA__c</fullName>
    <description>This is the sum of all Back Office OLA levels</description>
    <formula>SCC_Agent_SLA__c  +  SCC_Level1_OLA__c  +  SCC_Level2_OLA__c  +  SCC_Level3_OLA__c  +  SCC_Level4_OLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total BO OLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>