force-app/main/default/objects/SSC_Call_Type__c/fields/SCC_Total_SLA__c.field-meta.xml
<CustomField>
    <fullName>SCC_Total_SLA__c</fullName>
    <description>This is the sum of Agent SLA and OLAs of all level</description>
    <formula>SCC_Level1_OLA__c + SCC_Level2_OLA__c + SCC_Level3_OLA__c + SCC_Level4_OLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>