force-app/main/default/objects/SSC_Call_Type__c/fields/Send_to_Drone__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Drone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Drone</label>
    <type>Checkbox</type>
</CustomField>