force-app/main/default/objects/SSC_Call_Type__c/fields/Setting_Automation_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Setting_Automation_Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Setting Automation Settlement</label>
    <referenceTo>Setting_Automation_Settlement__c</referenceTo>
    <relationshipLabel>Case Types</relationshipLabel>
    <relationshipName>Case_Types</relationshipName>
    <type>Lookup</type>
</CustomField>