force-app/main/default/objects/SSC_Call_Type__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Settlement</label>
    <type>Checkbox</type>
</CustomField>