force-app/main/default/objects/SSC_Call_Type__c/fields/SSC_Case_Category__c.field-meta.xml
<CustomField>
    <fullName>SSC_Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint - Non-Transaction</fullName>
            </value>
            <value>
                <fullName>Complaint - Transaction</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Fraud / Suspicious Transactions</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Platform &amp; Device Support</fullName>
            </value>
            <value>
                <fullName>Products / Promotion Inquiry</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Third Party Support</fullName>
            </value>
            <value>
                <fullName>Customer Feedback / Sentiment Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>