force-app/main/default/objects/SSC_Call_Type__c/fields/SSC_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>SSC_Case_Description__c</fullName>
    <label>Deskripsi Case</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>