force-app/main/default/objects/SSC_Call_Type__c/fields/SSC_Level_3_Escalation_Team__c.field-meta.xml
<CustomField>
    <fullName>SSC_Level_3_Escalation_Team__c</fullName>
    <description>Escalation Team names on Case Type record as picklist</description>
    <label>Level 3 Escalation Teams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SSC_Escalation_Team</valueSetName>
    </valueSet>
</CustomField>