force-app/main/default/objects/SSC_Call_Type__c/fields/SSC_Product_L1__c.field-meta.xml
<CustomField>
    <fullName>SSC_Product_L1__c</fullName>
    <label>Product Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Transaction Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>