force-app/main/default/objects/SSC_Call_Type__c/fields/SSC_Product_L2__c.field-meta.xml
<CustomField>
    <fullName>SSC_Product_L2__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SSC_Product_L1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Deposito</fullName>
            </value>
            <value>
                <fullName>Digital Savings</fullName>
            </value>
            <value>
                <fullName>DPLK (Pension Fund)</fullName>
            </value>
            <value>
                <fullName>Electronic Money</fullName>
            </value>
            <value>
                <fullName>Giro (CA)</fullName>
            </value>
            <value>
                <fullName>Government Programme</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>Kartu Debit</fullName>
            </value>
            <value>
                <fullName>Kartu Kredit</fullName>
            </value>
            <value>
                <fullName>KPR (Mortgage)</fullName>
            </value>
            <value>
                <fullName>Kredit Investasi (Investment Loan)</fullName>
            </value>
            <value>
                <fullName>Kredit Modal Kerja (Working Capital)</fullName>
            </value>
            <value>
                <fullName>KTA (Personal Loan)</fullName>
            </value>
            <value>
                <fullName>KTA - Digital</fullName>
            </value>
            <value>
                <fullName>KUR (Business Loan - Micro)</fullName>
            </value>
            <value>
                <fullName>Mobile Banking</fullName>
            </value>
            <value>
                <fullName>Pawning</fullName>
            </value>
            <value>
                <fullName>Safe Deposit</fullName>
            </value>
            <value>
                <fullName>SBN (Bonds)</fullName>
            </value>
            <value>
                <fullName>Servicing - Layanan Cabang</fullName>
            </value>
            <value>
                <fullName>Servicing - Layanan Contact Center</fullName>
            </value>
            <value>
                <fullName>Tabungan</fullName>
            </value>
            <value>
                <fullName>Virtual Account</fullName>
            </value>
            <value>
                <fullName>Aplikasi Commodity Chain</fullName>
            </value>
            <value>
                <fullName>Informasi Promo, Program, Produk</fullName>
            </value>
            <value>
                <fullName>PPID</fullName>
            </value>
            <value>
                <fullName>Senyum Mobile</fullName>
            </value>
            <value>
                <fullName>Trustee &amp; Wali Amanat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>