force-app/main/default/objects/SSC_Call_Type__c/validationRules/CaseTypeNumberCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseTypeNumberCheck</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Case Type Number tidak dapat diubah</errorMessage>
</ValidationRule>