force-app/main/default/objects/SSC_Call_Type__c/validationRules/MandatoryCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryCheck</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Name ) || ISBLANK(  Text(SCC_Customer_Segment__c )) || ISBLANK(  Text( SSC_Product_L1__c )) || ISBLANK(  Text(SSC_Product_L2__c )) ||ISBLANK( Text(SSC_Case_Category__c )) || ISBLANK(  SSC_Case_Description__c )</errorConditionFormula>
    <errorMessage>Customer Segment/Product Grouping/Product/Case Category/Deskripsi Case wajib diisi</errorMessage>
</ValidationRule>