force-app/main/default/objects/SSC_Call_Type__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Send_to_Drone__c</columns>
    <columns>SCC_Sub_Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SCC_Level1_Escalation_team__c</columns>
    <columns>SCC_Level2_Escalation_team__c</columns>
    <columns>SCC_Level3_Escalation_team__c</columns>
    <columns>SCC_Total_SLA__c</columns>
    <columns>SCC_List_of_Required_Documents__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>