force-app/main/default/objects/SSC_Call_Type__c/listViews/Case_Type_Cicilan.listView-meta.xml
<ListView>
    <fullName>Case_Type_Cicilan</fullName>
    <columns>External_Id__c</columns>
    <columns>NAME</columns>
    <columns>SCC_List_of_Required_Documents__c</columns>
    <columns>Active__c</columns>
    <columns>SSC_Case_Description__c</columns>
    <columns>SCC_Customer_Segment__c</columns>
    <columns>SSC_Product_L1__c</columns>
    <columns>SSC_Product_L2__c</columns>
    <columns>SSC_Case_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SCC_Level4_Escalation_team__c</columns>
    <columns>Cicilan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>1703,1211,1707,1710,1716,1719,1721,1722,1724</value>
    </filters>
    <label>Case Type Cicilan</label>
</ListView>