force-app/main/default/objects/SSC_Call_Type__c/listViews/Drone_Case_Type.listView-meta.xml
<ListView>
    <fullName>Drone_Case_Type</fullName>
    <columns>NAME</columns>
    <columns>SSC_Case_Description__c</columns>
    <columns>Send_to_Drone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Send_to_Drone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Drone Case Type</label>
</ListView>