force-app/main/default/objects/SSC_Call_Type__c/listViews/Inactive_Case_Type.listView-meta.xml
<ListView>
    <fullName>Inactive_Case_Type</fullName>
    <columns>External_Id__c</columns>
    <columns>NAME</columns>
    <columns>SSC_Case_Description__c</columns>
    <columns>SCC_Customer_Segment__c</columns>
    <columns>SSC_Product_L1__c</columns>
    <columns>SSC_Product_L2__c</columns>
    <columns>SSC_Case_Category__c</columns>
    <columns>SCC_Level1_Escalation_team__c</columns>
    <columns>SCC_List_of_Required_Documents__c</columns>
    <columns>Send_to_Drone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Case Type</label>
    <sharedTo>
        <role>SCC_System_Administrator</role>
    </sharedTo>
</ListView>